zad2/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> anything_list
Rule 2     program -> <empty>
Rule 3     anything_list -> anything_list anything
Rule 4     anything_list -> anything
Rule 5     anything -> declaration
Rule 6     anything -> fundef
Rule 7     anything -> instruction
Rule 8     declarations -> declarations declaration
Rule 9     declarations -> declaration
Rule 10    declaration -> TYPE inits ;
Rule 11    declaration -> error ;
Rule 12    inits -> inits , init
Rule 13    inits -> init
Rule 14    init -> ID = expression
Rule 15    instruction -> print_instr
Rule 16    instruction -> labeled_instr
Rule 17    instruction -> assignment
Rule 18    instruction -> choice_instr
Rule 19    instruction -> while_instr
Rule 20    instruction -> repeat_instr
Rule 21    instruction -> return_instr
Rule 22    instruction -> break_instr
Rule 23    instruction -> continue_instr
Rule 24    instruction -> compound_instr
Rule 25    instruction -> expression ;
Rule 26    print_instr -> PRINT expr_list ;
Rule 27    print_instr -> PRINT error ;
Rule 28    labeled_instr -> ID : instruction
Rule 29    assignment -> ID = expression ;
Rule 30    choice_instr -> IF ( condition ) instruction
Rule 31    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 32    choice_instr -> IF ( error ) instruction
Rule 33    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 34    while_instr -> WHILE ( condition ) instruction
Rule 35    while_instr -> WHILE ( error ) instruction
Rule 36    repeat_instr -> REPEAT anything_list UNTIL condition ;
Rule 37    return_instr -> RETURN expression ;
Rule 38    continue_instr -> CONTINUE ;
Rule 39    break_instr -> BREAK ;
Rule 40    compound_instr -> { anything_list }
Rule 41    condition -> expression
Rule 42    const -> INTEGER
Rule 43    const -> FLOAT
Rule 44    const -> STRING
Rule 45    expression -> const
Rule 46    expression -> ID
Rule 47    expression -> expression + expression
Rule 48    expression -> expression - expression
Rule 49    expression -> expression * expression
Rule 50    expression -> expression / expression
Rule 51    expression -> expression % expression
Rule 52    expression -> expression | expression
Rule 53    expression -> expression & expression
Rule 54    expression -> expression ^ expression
Rule 55    expression -> expression AND expression
Rule 56    expression -> expression OR expression
Rule 57    expression -> expression SHL expression
Rule 58    expression -> expression SHR expression
Rule 59    expression -> expression EQ expression
Rule 60    expression -> expression NEQ expression
Rule 61    expression -> expression > expression
Rule 62    expression -> expression < expression
Rule 63    expression -> expression LE expression
Rule 64    expression -> expression GE expression
Rule 65    expression -> ( expression )
Rule 66    expression -> ( error )
Rule 67    expression -> ID ( expr_list_or_empty )
Rule 68    expression -> ID ( error )
Rule 69    expr_list_or_empty -> expr_list
Rule 70    expr_list_or_empty -> <empty>
Rule 71    expr_list -> expr_list , expression
Rule 72    expr_list -> expression
Rule 73    fundef -> TYPE ID ( args_list_or_empty ) compound_instr
Rule 74    args_list_or_empty -> args_list
Rule 75    args_list_or_empty -> <empty>
Rule 76    args_list -> args_list , arg
Rule 77    args_list -> arg
Rule 78    arg -> TYPE ID

Terminals, with rules where they appear

%                    : 51
&                    : 53
(                    : 30 31 32 33 34 35 65 66 67 68 73
)                    : 30 31 32 33 34 35 65 66 67 68 73
*                    : 49
+                    : 47
,                    : 12 71 76
-                    : 48
/                    : 50
:                    : 28
;                    : 10 11 25 26 27 29 36 37 38 39
<                    : 62
=                    : 14 29
>                    : 61
AND                  : 55
BREAK                : 39
CONTINUE             : 38
ELSE                 : 31 33
EQ                   : 59
FLOAT                : 43
GE                   : 64
ID                   : 14 28 29 46 67 68 73 78
IF                   : 30 31 32 33
INTEGER              : 42
LE                   : 63
NEQ                  : 60
OR                   : 56
PRINT                : 26 27
REPEAT               : 36
RETURN               : 37
SHL                  : 57
SHR                  : 58
STRING               : 44
TYPE                 : 10 73 78
UNTIL                : 36
WHILE                : 34 35
^                    : 54
error                : 11 27 32 33 35 66 68
{                    : 40
|                    : 52
}                    : 40

Nonterminals, with rules where they appear

anything             : 3 4
anything_list        : 1 3 36 40
arg                  : 76 77
args_list            : 74 76
args_list_or_empty   : 73
assignment           : 17
break_instr          : 22
choice_instr         : 18
compound_instr       : 24 73
condition            : 30 31 34 36
const                : 45
continue_instr       : 23
declaration          : 5 8 9
declarations         : 8
expr_list            : 26 69 71
expr_list_or_empty   : 67
expression           : 14 25 29 37 41 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 71 72
fundef               : 6
init                 : 12 13
inits                : 10 12
instruction          : 7 28 30 31 31 32 33 33 34 35
labeled_instr        : 16
print_instr          : 15
program              : 0
repeat_instr         : 20
return_instr         : 21
while_instr          : 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . anything_list
    (2) program -> .
    (3) anything_list -> . anything_list anything
    (4) anything_list -> . anything
    (5) anything -> . declaration
    (6) anything -> . fundef
    (7) anything -> . instruction
    (10) declaration -> . TYPE inits ;
    (11) declaration -> . error ;
    (73) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (15) instruction -> . print_instr
    (16) instruction -> . labeled_instr
    (17) instruction -> . assignment
    (18) instruction -> . choice_instr
    (19) instruction -> . while_instr
    (20) instruction -> . repeat_instr
    (21) instruction -> . return_instr
    (22) instruction -> . break_instr
    (23) instruction -> . continue_instr
    (24) instruction -> . compound_instr
    (25) instruction -> . expression ;
    (26) print_instr -> . PRINT expr_list ;
    (27) print_instr -> . PRINT error ;
    (28) labeled_instr -> . ID : instruction
    (29) assignment -> . ID = expression ;
    (30) choice_instr -> . IF ( condition ) instruction
    (31) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (32) choice_instr -> . IF ( error ) instruction
    (33) choice_instr -> . IF ( error ) instruction ELSE instruction
    (34) while_instr -> . WHILE ( condition ) instruction
    (35) while_instr -> . WHILE ( error ) instruction
    (36) repeat_instr -> . REPEAT anything_list UNTIL condition ;
    (37) return_instr -> . RETURN expression ;
    (39) break_instr -> . BREAK ;
    (38) continue_instr -> . CONTINUE ;
    (40) compound_instr -> . { anything_list }
    (45) expression -> . const
    (46) expression -> . ID
    (47) expression -> . expression + expression
    (48) expression -> . expression - expression
    (49) expression -> . expression * expression
    (50) expression -> . expression / expression
    (51) expression -> . expression % expression
    (52) expression -> . expression | expression
    (53) expression -> . expression & expression
    (54) expression -> . expression ^ expression
    (55) expression -> . expression AND expression
    (56) expression -> . expression OR expression
    (57) expression -> . expression SHL expression
    (58) expression -> . expression SHR expression
    (59) expression -> . expression EQ expression
    (60) expression -> . expression NEQ expression
    (61) expression -> . expression > expression
    (62) expression -> . expression < expression
    (63) expression -> . expression LE expression
    (64) expression -> . expression GE expression
    (65) expression -> . ( expression )
    (66) expression -> . ( error )
    (67) expression -> . ID ( expr_list_or_empty )
    (68) expression -> . ID ( error )
    (42) const -> . INTEGER
    (43) const -> . FLOAT
    (44) const -> . STRING

    $end            reduce using rule 2 (program -> .)
    TYPE            shift and go to state 33
    error           shift and go to state 31
    PRINT           shift and go to state 4
    ID              shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 5
    REPEAT          shift and go to state 15
    RETURN          shift and go to state 2
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 29
    {               shift and go to state 32
    (               shift and go to state 9
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 1
    STRING          shift and go to state 16

    choice_instr                   shift and go to state 3
    repeat_instr                   shift and go to state 6
    return_instr                   shift and go to state 7
    const                          shift and go to state 8
    continue_instr                 shift and go to state 10
    while_instr                    shift and go to state 11
    program                        shift and go to state 12
    assignment                     shift and go to state 17
    labeled_instr                  shift and go to state 18
    compound_instr                 shift and go to state 19
    declaration                    shift and go to state 20
    anything                       shift and go to state 23
    break_instr                    shift and go to state 24
    instruction                    shift and go to state 25
    fundef                         shift and go to state 26
    anything_list                  shift and go to state 27
    print_instr                    shift and go to state 28
    expression                     shift and go to state 30

state 1

    (43) const -> FLOAT .

    ;               reduce using rule 43 (const -> FLOAT .)
    +               reduce using rule 43 (const -> FLOAT .)
    -               reduce using rule 43 (const -> FLOAT .)
    *               reduce using rule 43 (const -> FLOAT .)
    /               reduce using rule 43 (const -> FLOAT .)
    %               reduce using rule 43 (const -> FLOAT .)
    |               reduce using rule 43 (const -> FLOAT .)
    &               reduce using rule 43 (const -> FLOAT .)
    ^               reduce using rule 43 (const -> FLOAT .)
    AND             reduce using rule 43 (const -> FLOAT .)
    OR              reduce using rule 43 (const -> FLOAT .)
    SHL             reduce using rule 43 (const -> FLOAT .)
    SHR             reduce using rule 43 (const -> FLOAT .)
    EQ              reduce using rule 43 (const -> FLOAT .)
    NEQ             reduce using rule 43 (const -> FLOAT .)
    >               reduce using rule 43 (const -> FLOAT .)
    <               reduce using rule 43 (const -> FLOAT .)
    LE              reduce using rule 43 (const -> FLOAT .)
    GE              reduce using rule 43 (const -> FLOAT .)
    ,               reduce using rule 43 (const -> FLOAT .)
    )               reduce using rule 43 (const -> FLOAT .)


state 2

    (37) return_instr -> RETURN . expression ;
    (45) expression -> . const
    (46) expression -> . ID
    (47) expression -> . expression + expression
    (48) expression -> . expression - expression
    (49) expression -> . expression * expression
    (50) expression -> . expression / expression
    (51) expression -> . expression % expression
    (52) expression -> . expression | expression
    (53) expression -> . expression & expression
    (54) expression -> . expression ^ expression
    (55) expression -> . expression AND expression
    (56) expression -> . expression OR expression
    (57) expression -> . expression SHL expression
    (58) expression -> . expression SHR expression
    (59) expression -> . expression EQ expression
    (60) expression -> . expression NEQ expression
    (61) expression -> . expression > expression
    (62) expression -> . expression < expression
    (63) expression -> . expression LE expression
    (64) expression -> . expression GE expression
    (65) expression -> . ( expression )
    (66) expression -> . ( error )
    (67) expression -> . ID ( expr_list_or_empty )
    (68) expression -> . ID ( error )
    (42) const -> . INTEGER
    (43) const -> . FLOAT
    (44) const -> . STRING

    ID              shift and go to state 34
    (               shift and go to state 9
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 1
    STRING          shift and go to state 16

    const                          shift and go to state 8
    expression                     shift and go to state 35

state 3

    (18) instruction -> choice_instr .

    TYPE            reduce using rule 18 (instruction -> choice_instr .)
    error           reduce using rule 18 (instruction -> choice_instr .)
    PRINT           reduce using rule 18 (instruction -> choice_instr .)
    ID              reduce using rule 18 (instruction -> choice_instr .)
    IF              reduce using rule 18 (instruction -> choice_instr .)
    WHILE           reduce using rule 18 (instruction -> choice_instr .)
    REPEAT          reduce using rule 18 (instruction -> choice_instr .)
    RETURN          reduce using rule 18 (instruction -> choice_instr .)
    BREAK           reduce using rule 18 (instruction -> choice_instr .)
    CONTINUE        reduce using rule 18 (instruction -> choice_instr .)
    {               reduce using rule 18 (instruction -> choice_instr .)
    (               reduce using rule 18 (instruction -> choice_instr .)
    INTEGER         reduce using rule 18 (instruction -> choice_instr .)
    FLOAT           reduce using rule 18 (instruction -> choice_instr .)
    STRING          reduce using rule 18 (instruction -> choice_instr .)
    $end            reduce using rule 18 (instruction -> choice_instr .)
    UNTIL           reduce using rule 18 (instruction -> choice_instr .)
    }               reduce using rule 18 (instruction -> choice_instr .)
    ELSE            reduce using rule 18 (instruction -> choice_instr .)


state 4

    (26) print_instr -> PRINT . expr_list ;
    (27) print_instr -> PRINT . error ;
    (71) expr_list -> . expr_list , expression
    (72) expr_list -> . expression
    (45) expression -> . const
    (46) expression -> . ID
    (47) expression -> . expression + expression
    (48) expression -> . expression - expression
    (49) expression -> . expression * expression
    (50) expression -> . expression / expression
    (51) expression -> . expression % expression
    (52) expression -> . expression | expression
    (53) expression -> . expression & expression
    (54) expression -> . expression ^ expression
    (55) expression -> . expression AND expression
    (56) expression -> . expression OR expression
    (57) expression -> . expression SHL expression
    (58) expression -> . expression SHR expression
    (59) expression -> . expression EQ expression
    (60) expression -> . expression NEQ expression
    (61) expression -> . expression > expression
    (62) expression -> . expression < expression
    (63) expression -> . expression LE expression
    (64) expression -> . expression GE expression
    (65) expression -> . ( expression )
    (66) expression -> . ( error )
    (67) expression -> . ID ( expr_list_or_empty )
    (68) expression -> . ID ( error )
    (42) const -> . INTEGER
    (43) const -> . FLOAT
    (44) const -> . STRING

    error           shift and go to state 37
    ID              shift and go to state 34
    (               shift and go to state 9
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 1
    STRING          shift and go to state 16

    expr_list                      shift and go to state 36
    expression                     shift and go to state 38
    const                          shift and go to state 8

state 5

    (34) while_instr -> WHILE . ( condition ) instruction
    (35) while_instr -> WHILE . ( error ) instruction

    (               shift and go to state 39


state 6

    (20) instruction -> repeat_instr .

    TYPE            reduce using rule 20 (instruction -> repeat_instr .)
    error           reduce using rule 20 (instruction -> repeat_instr .)
    PRINT           reduce using rule 20 (instruction -> repeat_instr .)
    ID              reduce using rule 20 (instruction -> repeat_instr .)
    IF              reduce using rule 20 (instruction -> repeat_instr .)
    WHILE           reduce using rule 20 (instruction -> repeat_instr .)
    REPEAT          reduce using rule 20 (instruction -> repeat_instr .)
    RETURN          reduce using rule 20 (instruction -> repeat_instr .)
    BREAK           reduce using rule 20 (instruction -> repeat_instr .)
    CONTINUE        reduce using rule 20 (instruction -> repeat_instr .)
    {               reduce using rule 20 (instruction -> repeat_instr .)
    (               reduce using rule 20 (instruction -> repeat_instr .)
    INTEGER         reduce using rule 20 (instruction -> repeat_instr .)
    FLOAT           reduce using rule 20 (instruction -> repeat_instr .)
    STRING          reduce using rule 20 (instruction -> repeat_instr .)
    $end            reduce using rule 20 (instruction -> repeat_instr .)
    UNTIL           reduce using rule 20 (instruction -> repeat_instr .)
    }               reduce using rule 20 (instruction -> repeat_instr .)
    ELSE            reduce using rule 20 (instruction -> repeat_instr .)


state 7

    (21) instruction -> return_instr .

    TYPE            reduce using rule 21 (instruction -> return_instr .)
    error           reduce using rule 21 (instruction -> return_instr .)
    PRINT           reduce using rule 21 (instruction -> return_instr .)
    ID              reduce using rule 21 (instruction -> return_instr .)
    IF              reduce using rule 21 (instruction -> return_instr .)
    WHILE           reduce using rule 21 (instruction -> return_instr .)
    REPEAT          reduce using rule 21 (instruction -> return_instr .)
    RETURN          reduce using rule 21 (instruction -> return_instr .)
    BREAK           reduce using rule 21 (instruction -> return_instr .)
    CONTINUE        reduce using rule 21 (instruction -> return_instr .)
    {               reduce using rule 21 (instruction -> return_instr .)
    (               reduce using rule 21 (instruction -> return_instr .)
    INTEGER         reduce using rule 21 (instruction -> return_instr .)
    FLOAT           reduce using rule 21 (instruction -> return_instr .)
    STRING          reduce using rule 21 (instruction -> return_instr .)
    $end            reduce using rule 21 (instruction -> return_instr .)
    UNTIL           reduce using rule 21 (instruction -> return_instr .)
    }               reduce using rule 21 (instruction -> return_instr .)
    ELSE            reduce using rule 21 (instruction -> return_instr .)


state 8

    (45) expression -> const .

    +               reduce using rule 45 (expression -> const .)
    -               reduce using rule 45 (expression -> const .)
    *               reduce using rule 45 (expression -> const .)
    /               reduce using rule 45 (expression -> const .)
    %               reduce using rule 45 (expression -> const .)
    |               reduce using rule 45 (expression -> const .)
    &               reduce using rule 45 (expression -> const .)
    ^               reduce using rule 45 (expression -> const .)
    AND             reduce using rule 45 (expression -> const .)
    OR              reduce using rule 45 (expression -> const .)
    SHL             reduce using rule 45 (expression -> const .)
    SHR             reduce using rule 45 (expression -> const .)
    EQ              reduce using rule 45 (expression -> const .)
    NEQ             reduce using rule 45 (expression -> const .)
    >               reduce using rule 45 (expression -> const .)
    <               reduce using rule 45 (expression -> const .)
    LE              reduce using rule 45 (expression -> const .)
    GE              reduce using rule 45 (expression -> const .)
    ;               reduce using rule 45 (expression -> const .)
    ,               reduce using rule 45 (expression -> const .)
    )               reduce using rule 45 (expression -> const .)


state 9

    (65) expression -> ( . expression )
    (66) expression -> ( . error )
    (45) expression -> . const
    (46) expression -> . ID
    (47) expression -> . expression + expression
    (48) expression -> . expression - expression
    (49) expression -> . expression * expression
    (50) expression -> . expression / expression
    (51) expression -> . expression % expression
    (52) expression -> . expression | expression
    (53) expression -> . expression & expression
    (54) expression -> . expression ^ expression
    (55) expression -> . expression AND expression
    (56) expression -> . expression OR expression
    (57) expression -> . expression SHL expression
    (58) expression -> . expression SHR expression
    (59) expression -> . expression EQ expression
    (60) expression -> . expression NEQ expression
    (61) expression -> . expression > expression
    (62) expression -> . expression < expression
    (63) expression -> . expression LE expression
    (64) expression -> . expression GE expression
    (65) expression -> . ( expression )
    (66) expression -> . ( error )
    (67) expression -> . ID ( expr_list_or_empty )
    (68) expression -> . ID ( error )
    (42) const -> . INTEGER
    (43) const -> . FLOAT
    (44) const -> . STRING

    error           shift and go to state 40
    ID              shift and go to state 34
    (               shift and go to state 9
    INTEGER         shift and go to state 13
    FLOAT           shift and go to state 1
    STRING          shift and go to state 16

    const                          shift and go to state 8
    expression                     shift and go to state 41

state 10

    (23) instruction -> continue_instr .

    TYPE            reduce using rule 23 (instruction -> continue_instr .)
    error           reduce using rule 23 (instruction -> continue_instr .)
    PRINT           reduce using rule 23 (instruction -> continue_instr .)
    ID              reduce using rule 23 (instruction -> continue_instr .)
    IF              reduce using rule 23 (instruction -> continue_instr .)
    WHILE           reduce using rule 23 (instruction -> continue_instr .)
    REPEAT          reduce using rule 23 (instruction -> continue_instr .)
    RETURN          reduce using rule 23 (instruction -> continue_instr .)
    BREAK           reduce using rule 23 (instruction -> continue_instr .)
    CONTINUE        reduce using rule 23 (instruction -> continue_instr .)
    {               reduce using rule 23 (instruction -> continue_instr .)
    (               reduce using rule 23 (instruction -> continue_instr .)
    INTEGER         reduce using rule 23 (instruction -> continue_instr .)
    FLOAT           reduce using rule 23 (instruction -> continue_instr .)
    STRING          reduce using rule 23 (instruction -> continue_instr .)
    $end            reduce using rule 23 (instruction -> continue_instr .)
    UNTIL           reduce using rule 23 (instruction -> continue_instr .)
    }               reduce using rule 23 (instruction -> continue_instr .)
    ELSE            reduce using rule 23 (instruction -> continue_instr .)


state 11

    (19) instruction -> while_instr .

    TYPE            reduce using rule 19 (instruction -> while_instr .)
    error           reduce using rule 19 (instruction -> while_instr .)
    PRINT           reduce using rule 19 (instruction -> while_instr .)
    ID              reduce using rule 19 (instruction -> while_instr .)
    IF              reduce using rule 19 (instruction -> while_instr .)
    WHILE           reduce using rule 19 (instruction -> while_instr .)
    REPEAT          reduce using rule 19 (instruction -> while_instr .)
    RETURN          reduce using rule 19 (instruction -> while_instr .)
    BREAK           reduce using rule 19 (instruction -> while_instr .)
    CONTINUE        reduce using rule 19 (instruction -> while_instr .)
    {               reduce using rule 19 (instruction -> while_instr .)
    (               reduce using rule 19 (instruction -> while_instr .)
    INTEGER         reduce using rule 19 (instruction -> while_instr .)
    FLOAT           reduce using rule 19 (instruction -> while_instr .)
    STRING          reduce using rule 19 (instruction -> while_instr .)
    $end            reduce using rule 19 (instruction -> while_instr .)
    UNTIL           reduce using rule 19 (instruction -> while_instr .)
    }               reduce using rule 19 (instruction -> while_instr .)
    ELSE            reduce using rule 19 (instruction -> while_instr .)


state 12

    (0) S' -> program .



state 13

    (42) const -> INTEGER .

    ;               reduce using rule 42 (const -> INTEGER .)
    +               reduce using rule 42 (const -> INTEGER .)
    -               reduce using rule 42 (const -> INTEGER .)
    *               reduce using rule 42 (const -> INTEGER .)
    /               reduce using rule 42 (const -> INTEGER .)
    %               reduce using rule 42 (const -> INTEGER .)
    |               reduce using rule 42 (const -> INTEGER .)
    &               reduce using rule 42 (const -> INTEGER .)
    ^               reduce using rule 42 (const -> INTEGER .)
    AND             reduce using rule 42 (const -> INTEGER .)
    OR              reduce using rule 42 (const -> INTEGER .)
    SHL             reduce using rule 42 (const -> INTEGER .)
    SHR             reduce using rule 42 (const -> INTEGER .)
    EQ              reduce using rule 42 (const -> INTEGER .)
    NEQ             reduce using rule 42 (const -> INTEGER .)
    >               reduce using rule 42 (const -> INTEGER .)
    <               reduce using rule 42 (const -> INTEGER .)
    LE              reduce using rule 42 (const -> INTEGER .)
    GE              reduce using rule 42 (const -> INTEGER .)
    ,               reduce using rule 42 (const -> INTEGER .)
    )               reduce using rule 42 (const -> INTEGER .)


state 14

    (39) break_instr -> BREAK . ;

    ;               shift and go to state 42


state 15

    (36) repeat_instr -> REPEAT . anything_list UNTIL condition ;
    (3) anything_list -> . anything_list anything
    (4) anything_list -> . anything
    (5) anything -> . declaration
    (6) anything -> . fundef
    (7) anything -> . instruction
    (10) declaration -> . TYPE inits ;
    (11) declaration -> . error ;
    (73) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (15) instruction -> . print_instr
    (16) instruction -> . labeled_instr
    (17) instruction -> . assignment
    (18) instruction -> . choice_instr
    (19) instruction -> . while_instr
    (20) instruction -> . repeat_instr
    (21) instruction -> . return_instr
    (22) instruction -> . break_instr
    (23) instruction -> . continue_instr
    (24) instruction -> . compound_instr
    (25) instruction -> . expression ;
    (26) print_instr -> . PRINT expr_list ;
    (27) print_instr -> . PRINT error ;
    (28) labeled_instr -> . ID : instruction
    (29) assignment -> . ID = expression ;
    (30) choice_instr -> . IF ( condition ) instruction
    (31) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (32) choice_instr -> . IF ( error ) instruction
    (33) choice_instr -> . IF ( error ) instruction ELSE instruction
    (34) while_instr -> . WHILE ( condition ) instruction
    (35) while_instr -> . WHILE ( error ) instruction
    (36) repeat_instr -> . REPEAT anything_list UNTIL condition ;
    (37) return_instr -> . RETURN expression ;
    (39) break_instr -> . BREAK ;
    (38) continue_instr -> . CONTINUE ;
    (40) compound_instr -> . { anything_list }
    (45) expression -> . const
    (46) expression -> . ID
    (47) expression -> . expression + expression
    (48) expression -> . expression - expression
    (49) expression -> . expression * expression
    (50) expression -> . expression / expression
    (51) expression -> . expression % expression
    (52) expression -> . expression | expression
    (53) expression -> . expression & expression
    (54) expression -> . expression ^ expression
    (55) expression -> . expression AND expression
    (56) expression -> . expression OR expression
    (57) expression -> . expression SHL expression
    (58) expression -> . expression SHR expression
    (59) expression -> . expression EQ expression
    (60) expression -> . expression NEQ expression
    (61) expression -> . expression > expression
    (62) expression -> . expression < expression
    (63) expression -> . expression LE expression
    (64) expression -> . expression GE expression
    (65) expression -> . ( expression )
    (66) expression -> . ( error )
    (67) expression -> . ID ( expr_list_or_empty )
    (68) expression -> . ID ( error )
    (42) const -> . INTEGER
    (43) const -> . FLOAT
    (44) const -> . STRING

    TYPE            shift and go to state 33
    error           shift and go to state 31
    PRINT           shift and go to state 4
    ID              shift and go to state 21
